--- a/arch/arm/boot/dts/qcom-msm8974-lge-nexus5-hammerhead.dts
+++ b/arch/arm/boot/dts/qcom-msm8974-lge-nexus5-hammerhead.dts
@@ -575,6 +575,18 @@
 		};
 	};
 
+	ocmem@fdd00000 {
+		status = "ok";
+	};
+
+	opp_table {
+		status = "ok";
+	};
+
+	adreno@fdb00000 {
+		status = "ok";
+	};
+
 	mdss@fd900000 {
 		status = "ok";
 
